[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MainMenuUI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Game Objects/ProtoSquare.png" type="Texture" id=2]
[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Game Objects/LDP1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Game Objects/LDBullet.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Game Objects/LDP2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="MainMenuUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -156.0
margin_top = -126.0
margin_right = 82.0
margin_bottom = -86.0
custom_fonts/font = SubResource( 4 )
text = "Knockback"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -38.0
margin_top = -83.0
margin_right = 147.0
margin_bottom = -43.0
custom_fonts/font = SubResource( 4 )
text = "Buddies"

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 84.0
margin_top = 107.0
margin_right = 291.0
margin_bottom = 158.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
text = "Game made by Fipmotron
Music made by ThePixel
 on OpenGameArt.org"

[node name="TutorielButton" type="Button" parent="."]
margin_left = -81.0
margin_top = 50.0
margin_right = 81.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 1 )
text = "Tutoriel"

[node name="PVPButton" type="Button" parent="."]
margin_left = -156.0
margin_top = -3.0
margin_right = 156.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Player Vs Player"

[node name="QuitButton" type="Button" parent="."]
margin_left = -43.0
margin_top = 101.0
margin_right = 45.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 3 )
text = "Quit"

[node name="Ldp1" type="Sprite" parent="."]
position = Vector2( -126, -59 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="Ldp2" type="Sprite" parent="."]
position = Vector2( 120, -100 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="LdBullet" type="Sprite" parent="."]
position = Vector2( -60, -59 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="ProtoSquare" type="Sprite" parent="."]
modulate = Color( 0.109804, 0.109804, 0.109804, 1 )
position = Vector2( 2, -79 )
scale = Vector2( 20.1875, 5.8125 )
z_index = -2
texture = ExtResource( 2 )

[node name="ProtoSquare2" type="Sprite" parent="."]
position = Vector2( 135.5, 121 )
scale = Vector2( 6.6875, 1.75 )
z_index = -1
texture = ExtResource( 2 )

[connection signal="pressed" from="TutorielButton" to="." method="_on_TutorielButton_pressed"]
[connection signal="pressed" from="PVPButton" to="." method="_on_PVPButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
